part-a/k8s-manifests/rocketchat/base/deployment.yaml
### RocketChat Deployment Object
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rocketchat
  template:
    metadata:
      labels:
        app: rocketchat
    spec:
      containers:
        - name: rocketchat
          image: rocketchat/rocket.chat:3.17
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
